	PR c++/16853 	* call.c (standard_conversion): Do not accept conversions between 	pointers to members if the class types are unrelated.

PR c++/16618
	* parser.c (cp_parser_builtin_offsetof): Cast to "const volatile
	char &" instead of just "char &".

	PR c++/16870
	* pt.c (tsubst): Just return the unknown_type_node.

	PR c++/16853
	* g++.dg/init/ptrmem1.C: New test.

	PR c++/16618
	* g++.dg/parse/offsetof5.C: New test.

	PR c++/16870
	* g++.dg/template/overload3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85840 138bc75d-0d04-0410-961f-82ee72b054a4