gcc/testsuite/g++.dg/init/ptrmem1.C
@@ -1,0 +1,7 @@
+// PR c++/16853
+
+struct A {};
+struct B {};
+
+int B::* b;
+int A::* a = b; // { dg-error "" }
